<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmwave</name>
  <version>1.0.0</version>
  <description>Configure and read data from TI mmWave evaluation boards</description>
  <maintainer email="mikkel.starvik@gmail.com">Mikkel Stårvik</maintainer>
  <license>CC0 1.0 Universal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
